Flower school implementation

--- a/MyFirstApp/Base.lproj/LaunchScreen.storyboard
+++ b/MyFirstApp/Base.lproj/LaunchScreen.storyboard
@@ -18,21 +18,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A2n-xT-PkS">
-                                <rect key="frame" x="123.5" y="323.5" width="128" height="20.5"/>
-                                <color key="tintColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <label autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A2n-xT-PkS">
+                                <rect key="frame" x="134" y="323.5" width="107.5" height="20.5"/>
+                                <color key="tintColor" red="0.15546789765357971" green="0.29453843832015991" blue="0.29524964094161987" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="My First iOS App">
+                                    <fragment content="Flower School">
                                         <attributes>
+                                            <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                             <font key="NSFont" metaFont="system" size="17"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
-                                <nil key="highlightedColor"/>
+                                <color key="highlightedColor" red="0.1554678977" green="0.29453843829999998" blue="0.2952496409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.84289732044467014" green="0.69441141716240773" blue="0.70372732855042797" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.92536520957946777" green="0.92540150880813599" blue="0.93354290723800659" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="A2n-xT-PkS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="GvX-uc-GU3"/>
                             <constraint firstItem="A2n-xT-PkS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HV7-07-Fgs"/>
