--- a/MyFirstApp/Base.lproj/LaunchScreen.storyboard
+++ b/MyFirstApp/Base.lproj/LaunchScreen.storyboard
@@ -19,10 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A2n-xT-PkS">
-                                <rect key="frame" x="134" y="323.5" width="107.5" height="20.5"/>
+                                <rect key="frame" x="154.5" y="323.5" width="66.5" height="20.5"/>
                                 <color key="tintColor" red="0.15546789765357971" green="0.29453843832015991" blue="0.29524964094161987" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="Flower School">
+                                    <fragment content="MARVEL">
                                         <attributes>
                                             <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                             <font key="NSFont" metaFont="system" size="17"/>
@@ -30,7 +30,6 @@
                                         </attributes>
                                     </fragment>
                                 </attributedString>
-                                <color key="highlightedColor" red="0.1554678977" green="0.29453843829999998" blue="0.2952496409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.92536520957946777" green="0.92540150880813599" blue="0.93354290723800659" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
